--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 :root {
   font-family: "Courier New", Courier, monospace;
-  background-color: #17171c;
+  font-size: 16px;
+  --fondo: #000;
+  --fondo-calculadora: #a78d9e;
+  --textol: #000;
+  --primario: #74819d;
 }
 * {
   margin: 0;
   padding: 0;
-  
 }
 #root {
   height: 100vh;
@@ -17,8 +20,7 @@ main {
   aspect-ratio: 6/10;
   border-radius: 40px;
   height: 90%;
-  min-height:600px;
+  min-height: 600px;
   box-shadow: 0 0 20px 10px #000000;
   text-align: center;
-  
 }
