--- a/src/components/calculadora.css
+++ b/src/components/calculadora.css
@@ -1,17 +1,34 @@
 main {
-    background: var(--fondo-calculadora);
-    aspect-ratio: 9/16;
-    border-radius: 1rem;
-    height: 90%;
-    min-height: 600px;
-    box-shadow: var(--box-shadow);
-    padding: .5rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
-  }
+  background: var(--fondo-calculadora);
+  aspect-ratio: 9/16;
+  border-radius: 1rem;
+  height: 90%;
+  min-height: 600px;
+  box-shadow: var(--box-shadow);
+  padding: 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+input {
+  grid-column: span 4;
+  text-align: right;
+  font-size: larger;
+  border: none ;
+  border-radius: 0.5rem;
+  background-color: var(--secundario);
+  padding: 0 .5rem;
+}
 
-  input{
-grid-column: span 4;
-  }
-  
+input.Resultado {
+  color: var(--textol);
+  font-size: 3rem;
+  font-weight: bold;
+}
+input.Displey {
+  color: var(--textol);
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+
