--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --fondo-calculadora: #a78d9e;
   --textol: #000;
   --primario: #74819d;
-  --secundario: #fef0a5;
+  --secundario: #e3dfdf;
   --terciario: #f38181;
   --box-shadow: 0 0 20px 10px #000000;
   background-color: var(--fondo);
